// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class-properties 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "\\"use strict\\";

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

class Bork {
  constructor() {
    _defineProperty(this, \\"instanceProperty\\", \\"bork\\");

    _defineProperty(this, \\"boundFunction\\", () => {
      return this.instanceProperty;
    });
  }

}

_defineProperty(Bork, \\"staticProperty\\", \\"babelIsCool\\");

_defineProperty(Bork, \\"staticFunction\\", function () {
  return Bork.staticProperty;
});",
}
`;

exports[`nullish-coalescing 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "\\"use strict\\";

var _object$foo;

var foo = (_object$foo = object.foo) !== null && _object$foo !== void 0 ? _object$foo : \\"default\\";",
}
`;

exports[`optional-chaining 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "\\"use strict\\";

var _foo;

(_foo = foo) === null || _foo === void 0 ? void 0 : _foo.bar;",
}
`;

exports[`plugin-transform-modules-commonjs 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = 42;
exports.default = _default;",
}
`;

exports[`preset-typescript 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "\\"use strict\\";

const x = 0;",
}
`;
